--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\Dev\\python.exe",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
