--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow_gpu\\python.exe",
+    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
