--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow\\python.exe",
+    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow_gpu\\python.exe",
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
-    "python.linting.mypyEnabled": true
+    "python.linting.mypyEnabled": false,
+    "python.linting.pylamaEnabled": true
 }
