Updated to tensorslow 2.0. Utilizing eager evaluation mode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow_gpu\\python.exe",
+    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow\\python.exe",
     "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "python.linting.mypyEnabled": false,
