--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 absl-py==0.7.1
 astor==0.8.0
 astroid==2.2.5
+atari-py==0.1.15
+autopep8==1.4.4
 certifi==2019.6.16
+chardet==3.0.4
 cloudpickle==1.2.1
 colorama==0.4.1
 cycler==0.10.0
+decorator==4.4.0
 future==0.17.1
 gast==0.2.2
 google-pasta==0.1.7
@@ -12,7 +16,10 @@ grpcio==1.21.1
 gym==0.13.0
 gym-super-mario-bros==7.2.3
 h5py==2.9.0
+idna==2.8
+imageio==2.5.0
 isort==4.3.21
+Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
@@ -20,22 +27,44 @@ lazy-object-proxy==1.4.1
 Markdown==3.1.1
 matplotlib==3.1.0
 mccabe==0.6.1
+mock==3.0.5
+mypy==0.701
+mypy-extensions==0.4.1
 nes-py==8.0.2
+networkx==2.3
 numpy==1.16.4
 opencv-contrib-python==4.1.0.25
+opencv-python==4.1.0.25
+opt-einsum==2.3.2
+Pillow==6.0.0
 protobuf==3.8.0
+psutil==5.4.8
+pycodestyle==2.5.0
+pygame==1.9.6
 pyglet==1.3.2
 pylint==2.3.1
+PyOpenGL==3.1.0
 pyparsing==2.4.0
 python-dateutil==2.8.0
+PyWavelets==1.0.3
+PyYAML==5.1
+requests==2.22.0
+scikit-image==0.15.0
 scipy==1.3.0
 six==1.12.0
+tb-nightly==1.14.0a20190603
 tensorboard==1.14.0
-tensorflow==1.14.0
+tensorflow==2.0.0b1
 tensorflow-estimator==1.14.0
+tensorflow-gpu==1.14.0
 termcolor==1.1.0
+tf-estimator-nightly==1.14.0.dev2019060501
+tf-nightly-gpu==1.15.0.dev20190629
 tqdm==4.32.2
 typed-ast==1.4.0
+urllib3==1.25.2
+virtualenv==16.6.0
+websockets==7.0
 Werkzeug==0.15.4
 wincertstore==0.2
 wrapt==1.11.2
