--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\Dev\\python.exe",
-    "python.linting.pylintEnabled": true,
+    "python.pythonPath": "C:\\Users\\zacho\\.conda\\envs\\tensorflow_gpu\\python.exe",
+    "python.linting.pylintEnabled": false,
     "python.linting.enabled": true,
     "python.linting.mypyEnabled": false,
-    "python.linting.pylamaEnabled": false
+    "python.linting.pylamaEnabled": true
 }
